# bnssrc-gs

./: .envrc  .gitignore  .prettierrc.json  Cargo.toml  sea-env.bash  sea-env.ps1  ws.code-workspace
bnssvr/: .bashrc  .gitignore  Cargo.toml  build.rs  cert.pem  env.local  key.pem  log4rs-bs.yml  log4rs.yml  rustfmt.toml
bnssvr/.devcontainer/: Dockerfile  devcontainer.json
bnssvr/app/bnsmap/: index.rs  main.rs
bnssvr/conf/: .gitignore  bnsmap.env  bnsrtsp.env
bnssvr/log4rs/: log4rs-file.yml  log4rs-gate.yml
bnssvr/src/: index.rs  lib.rs  main.rs
bnssvr/src/api/: mod.rs  routes.rs
bnssvr/src/ebrd/: ebrd_util.rs  mod.rs
bnssvr/src/ebrd_app/: app.rs  app_cmd_loop.rs  app_disp_msg.rs  app_stat.rs  mod.rs  model.rs
bnssvr/src/emcall_app/: app.rs  app_evt.rs  app_stat.rs  evt.rs  mod.rs  model.rs  stat.rs
bnssvr/src/entities/: mod.rs  prelude.rs  tb_alm_hist.rs  tb_alm_sett.rs  tb_alm_sms_hist.rs  tb_alm_user.rs  tb_alm_water.rs  tb_board.rs  tb_book_mark.rs  tb_camera.rs  tb_cd.rs  tb_config.rs  tb_ebrd.rs  tb_ebrd_hist.rs  tb_ebrd_map_msg.rs  tb_ebrd_msg.rs  tb_emcall.rs  tb_emcall_evt_hist.rs  tb_emcall_grp.rs  tb_emcall_grp_stat_hist.rs  tb_file.rs  tb_file_tmp.rs  tb_gate.rs  tb_gate_camera.rs  tb_gate_ebrd.rs  tb_gate_emcall.rs  tb_gate_emcall_grp.rs  tb_gate_hist.rs  tb_group.rs  tb_group_el.rs  tb_grp.rs  tb_grp_tree.rs  tb_log.rs  tb_login.rs  tb_msg.rs  tb_ncd.rs  tb_ndms_map_ebrd.rs  tb_ndms_map_gate.rs  tb_ndms_map_water.rs  tb_region.rs  (+14 more)
bnssvr/src/gate_app/: autodown.rs  gate_cmd.rs  (+4 more)
bnssvr/static/: 404.html
bnssvr/templates/: index.html.tera
(+999 files in other folders)
