[package]
name = "bnssvr"
version = "0.1.0"
edition = "2021"
default-run = "bnssvr"
build = "build.rs"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = { version = "4.11.0" }
actix-ws = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.22.1"
bcrypt = "0.16.0"
bitflags = "2.9.1"
byteorder = "1.5.0"
bytestring = "1.4.0"
cached = { version = "0.54.0", features = ["async"] }
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenv = "0.15.0"
downcast-rs = "2.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
md5 = "0.7.0"
mime = "0.3.17"
mime_guess = "2.0.5"
once_cell = "1.21.3"
qstring = "0.7.2"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
rust-ini = "0.21.2"
sea-orm = { version = "1.1.14", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-modbus = "0.16.1"
tokio-tungstenite = "0.26.2"
url = "2.5.4"
urlencoding = "2.1.3"


[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "rustc", "cargo", "si"] }

[[bin]]
name = "bnssvr"
path = "src/main.rs"


[[bin]]
name = "bnsmap"
path = "app/bnsmap/main.rs"
